# dyndns

./: .gitignore  Makefile  README.md  convtime.py  dyndns  dyndns.conf  dyndns.service  dyndns.toml  pyproject.toml  requirements.txt  timesync.py
dyndns.runit/: run
dyndns.runit/log/: run
