[build-system]
requires = ["setuptools>=61.0", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "dyndns"
description = "DynDNS IPv4 and/or IPv6 Dynamic DNS Client"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.8"
keywords = ["dns"]
classifiers = [
  "Programming Language :: Python :: 3",
]
dynamic = ["version"]
dependencies = [
  "aiohttp",
  "platformdirs",
  "tomli >= 1.1.0; python_version < '3.11'",
]

[[project.authors]]
name = "Mark Blakeney"
email = "mark.blakeney@bullet-systems.net"

[project.urls]
Homepage = "https://github.com/bulletmark/dyndns"

[tool.setuptools_scm]
version_scheme = "post-release"

[tool.ruff.format]
quote-style = "single"
skip-magic-trailing-comma = true

[tool.pyright]
venvPath = "."
venv = ".venv"

# vim:se sw=2:
